tests/golden/type_errors/inferred_let_string_assignment_mismatch.cd
let s = "hi";
s = 2;
